finished google home page project.

--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
 <body>
     <header>
         <div class="nav-container">
-            <a>
+            <a class="text-link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                 <p>
                     About
                 </p>
             </a>
-            <a>
+            <a class="text-link" target="_blank" href="https://www.youtube.com/watch?v=CY9UFFhyeVQ">
                 <p>
                     Store
                 </p>
             </a>
         </div>
-        <nav class="nav-container">
-            <a>
+        <nav class="nav-container nav-container-second">
+            <a class="text-link" target="_blank" href="https://www.youtube.com/watch?v=znL21TAo45Y">
                 <p>
                     Gmail
                 </p>
             </a>
-             <a>
+             <a class="text-link" target="_blank" href="https://www.youtube.com/watch?v=Twi92KYddW4">
                 <p>
                     Images
                 </p>
             </a>
-            <a>
+            <a class="icon-link" target="_blank" href="https://www.youtube.com/watch?v=-50NdPawLVY">
                 <i class="fa-solid fa-flask"></i>
             </a>
-            <a>
+            <a class="icon-link" target="_blank" href="https://www.youtube.com/watch?v=6o-ppv72CkI">
                 <i class="fa-solid fa-braille"></i>
             </a>
             <button class="img-button">
@@ -47,10 +47,51 @@
         </nav>
     </header>
     <main>
-
+        <h1 class="title-text">Google</h1>
+        <div class="input-bar">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input title="search"/>
+            <div>
+                <button class="input-icon">
+                    <i class="fa-solid fa-microphone"></i>
+                </button>
+                <button class="input-icon"><i class="fa-solid fa-camera"></i></button>
+            </div>
+        </div>
+        <div class="button-grid">
+            <button><p>Google Search</p></button>
+            <button><p>I'm Feeling Lucky</p></button>
+        </div>
+        <p class="language-text">Google offered in: <a class="language-link">Tagalog</a></p>
     </main>
     <footer>
-
+        <div>
+            <p>United States of America</p>
+        </div>
+        <hr />
+        <div class="footer-grid">
+            <div class="footer-links">
+                <a href="/">
+                    <p>Advertising</p>
+                </a>
+                 <a href="/">
+                    <p>Business</p>
+                </a>
+                 <a href="/">
+                    <p>How Search Works</p>
+                </a>
+            </div class="footer-links">
+                <a href="/">
+                    <p>Privacy</p>
+                </a>
+                 <a href="/">
+                    <p>Terms</p>
+                </a>
+                 <a href="/">
+                    <p>Settings</p>
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
